--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config build/webpack.dev.config.js --color",
-    "build": "webpack --config build/webpack.prod.config.js"
+    "dev": "node server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "dayjs": "^1.8.28",
     "element-ui": "^2.13.2",
     "highlight.js": "^10.1.1",
+    "express":"^4.17.1",
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.4.2",
+    "vue-server-renderer":"^2.6.11",
+    "vuex-router-sync":"^5.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-class": "^0.3.2"
@@ -52,7 +57,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals":"^2.5.2"
   },
   "repository": {
     "type": "git",
