--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:client": "rimraf dist && webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "rimraf dist && webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.19.2",
