--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server",
+    "start": "npm run build && node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "rimraf dist && webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "rimraf dist && webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.19.2",
