--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "dayjs": "^1.8.28",
     "element-ui": "^2.13.2",
     "highlight.js": "^10.1.1",
+    "koa":"^2.13.0",
+    "koa-router":"^9.4.0",
+    "koa-static":"^5.0.0",
     "express":"^4.17.1",
+    "http-proxy-middleware":"^1.0.6",
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.4.2",
     "vue-server-renderer":"^2.6.11",
